perfect function has realize ,only the gridview refresh

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
-    android:background="#ff0000"
+    android:background="#D8D8EB"
     android:orientation="vertical"
     >
 <TextView
@@ -19,14 +19,14 @@
     />
 <com.example.zy.girddemo.View.BookGrid
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="wrap_content"
        android:id="@+id/bookGrid"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:columnWidth="90dp"
-       android:stretchMode="columnWidth"
        android:gravity="center"
+
        >
 </com.example.zy.girddemo.View.BookGrid>
 </LinearLayout>
