--- a/app/src/main/res/layout/nitht_item.xml
+++ b/app/src/main/res/layout/nitht_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
+    android:background="#000000"
     >
     <ImageView
         android:layout_width="wrap_content"
