坐标优化，缩放大小

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookGrid"
-       android:numColumns="auto_fit"
-       android:verticalSpacing="10dp"
-       android:horizontalSpacing="10dp"
+       android:numColumns="3"
        android:columnWidth="90dp"
        android:gravity="center"
 
