--- a/app/src/main/res/layout/nitht_item.xml
+++ b/app/src/main/res/layout/nitht_item.xml
@@ -2,14 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
     android:background="#000000"
     >
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/bookCover"
+        android:scaleType="fitXY"
         android:layout_centerHorizontal="true"
         />
     <TextView
